2002-05-21  Michael Meeks  <michael@ximian.com>

	* src/nautilus-sidebar-tabs.c (get_property_bag):
	cache the property bag item, so we're not forever
	querying for it.
	(tab_item_destroy): re-write, belt and braces.
	(nautilus_sidebar_tabs_connect_view): update.
	(get_tab_image_name): don't release the property bag.
	(nautilus_sidebar_tabs_update_indicator): kill, unused.
	(nautilus_sidebar_tabs_add_view): associate the tab
	with it's parent.
	(tab_indicator_changed_callback): update just 1 tab.
	(nautilus_sidebar_tabs_update_all_indicators): remove,
	not what we wanted anyway.
	(nautilus_sidebar_tabs_update_tab_item): update sig.

2002-05-21  Michael Meeks  <michael@ximian.com>

	* src/file-manager/fm-list-view.c
	(list_activate_callback): move this code
	(event_after_callback): into here, it seems we get
	the event after the callback whether handled or not.
	(create_and_set_up_tree_view): unhook list_activate.

2002-05-20  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window-menus.c
	(refresh_bookmarks_menu): hold refs on the window,
	in case we re-enter during bookmark build and destroy
	it.

2002-05-20  Alex Graveley  <alex@ximian.com>

	* libnautilus-private/nautilus-link-desktop-file.c
	(nautilus_link_desktop_file_local_create): Force saving of desktop
	file to counteract bug in libgnome-desktop.

2002-05-21  Anders Carlsson  <andersca@gnu.org>

	* src/file-manager/fm-directory-view.c: (finish_loading):
	Schedule an idle instead of a timeout when we know all the 
	files in the directory.
	
=== nautilus 1.1.17 ===
 
2002-05-20  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	* NEWS:
	Bumped to 1.1.17.
	Require eel 1.1.15.

2002-05-17  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	Remove libpng checks. They are not used.

2002-05-17  Alex Graveley  <alex@ximian.com>

	* src/file-manager/fm-icon-view.c
	(get_icon_drop_target_uri_callback): Pass file URI to
	nautilus_link_*, instead of local path.