@@ -1,3 +1,12 @@
+2002-05-21  Frank Worsley  <fworsley@shaw.ca>
+
+	* libnautilus-private/nautilus-link-desktop-file.c:
+	(nautilus_link_desktop_file_local_create): allow creation
+	of desktop files without a nautilus icon
+	
+	* src/file-manager/fm-icon-view.c:
+	(icon_view_handle_uri_list): make dnd of uri lists work right
+
 2002-05-21  Michael Meeks  <michael@ximian.com>
 
 	* src/nautilus-sidebar-tabs.c (get_property_bag):
